--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["Beckham", "Giggs", "Thierry"]
+  "cSpell.words": ["Beckham", "Giggs", "Thierry"],
+  "liveServer.settings.port": 5501
 }
